:tada: feat: update to eden 0.2

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,9 +7,9 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
-    "@elysiajs/cors": "^0.1.0-rc.3",
-    "@elysiajs/static": "^0.1.0-rc.3",
-    "elysia": "^0.1.0-rc.8"
+    "@elysiajs/cors": "^0.1.0",
+    "@elysiajs/static": "^0.1.0",
+    "elysia": "^0.1.2"
   },
   "devDependencies": {
     "bun-types": "^0.3.0"
