--- a/apps/react/package.json
+++ b/apps/react/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "libs": "workspace:*",
     "next": "13.0.0",
     "react": "18.2.0",
