--- a/packages/libs/package.json
+++ b/packages/libs/package.json
@@ -8,15 +8,16 @@
     "lint": "eslint *.ts*"
   },
   "dependencies": {
-    "@elysiajs/eden": "^0.2.0-rc.3"
+    "@elysiajs/eden": "0.3.0",
+    "elysia": "0.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "backend": "workspace:*",
+    "elysia": "^0.1.2",
     "eslint": "^7.32.0",
     "eslint-config-custom": "workspace:*",
-    "elysia": "^0.1.2",
     "react": "^18.2.0",
     "tsconfig": "workspace:*",
     "typescript": "^4.5.2"
