--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "eslint-config-custom": "workspace:*",
-    "prettier": "latest",
-    "turbo": "latest"
+    "prettier": "^3.0.3",
+    "turbo": "^1.10.7"
   },
   "engines": {
     "node": ">=14.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "bun-types": "^1.0.1"
+  },
   "packageManager": "pnpm@7.5.1"
 }
