--- a/packages/libs/package.json
+++ b/packages/libs/package.json
@@ -8,18 +8,17 @@
     "lint": "eslint *.ts*"
   },
   "dependencies": {
-    "@elysiajs/eden": "0.3.0",
-    "elysia": "0.3.1"
+    "@elysiajs/eden": "0.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "backend": "workspace:*",
-    "elysia": "^0.1.2",
+    "elysia": "0.6.19",
     "eslint": "^7.32.0",
     "eslint-config-custom": "workspace:*",
     "react": "^18.2.0",
     "tsconfig": "workspace:*",
-    "typescript": "^4.5.2"
+    "typescript": "^5.2.2"
   }
 }
